Fix footer alignment

--- a/_sass/6_layout/_layout.scss
+++ b/_sass/6_layout/_layout.scss
@@ -35,6 +35,7 @@ body {
   }
 
   &-footer {
+    margin: 0 auto;
     width: 100%;
     min-width: 350px;
     max-width: 1400px;
